add log and json output and CRUD method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.19.45.170:3306/zzj_users?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://IP_Address:3306/zzj_users?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=
